<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Heart Rate"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/heartRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="Enter heart rate"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Systolic"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/systolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="Enter systolic value"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Diastolic"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/diastolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="Enter diastolic value"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date and Time"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="Enter date (MM/DD/YYYY)"/>

    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:hint="Enter time (HH:MM)"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Comment"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="Optional"/>

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Save" />

    </LinearLayout>



</LinearLayout>
