<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="#FFFFFF"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_marginTop="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp"
        android:background="#E4D1FB"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/systoliclabel"
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:text="Systolic level:"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic" />
            <TextView
                android:id="@+id/systolic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/diastoliclabel"
                android:layout_height="wrap_content"
                android:layout_width="176dp"
                android:text="Diastolic level:"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic"/>
            <TextView
                android:id="@+id/diastolic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/heartRatelabel"
                android:layout_height="wrap_content"
                android:layout_width="176dp"
                android:text="Heart Rate :"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic"/>
            <TextView
                android:id="@+id/heartRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/Datelabel"
                android:layout_height="wrap_content"
                android:layout_width="176dp"
                android:text="Date :"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic"/>
            <TextView
                android:id="@+id/Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/Timelabel"
                android:layout_height="wrap_content"
                android:layout_width="176dp"
                android:text="Time :"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic"/>
            <TextView
                android:id="@+id/Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/commentlabel"
                android:layout_height="wrap_content"
                android:layout_width="176dp"
                android:text="Comment :"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic"/>
            <TextView
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold|italic"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDetails"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00BA000D"
                android:textColor="#14CAB9"
                android:text="Details Record"
                android:textSize="10dp" />

            <Button
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:backgroundTint="#05D5EF"
                android:text="Update"
                android:textSize="10dp" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:backgroundTint="#0C0C0C"
                android:text="Delete"
                android:textSize="10dp" />


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>